-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.0
-
f3a64b13725081eb94b05dbeb5f68a2298c9163e (qt/qtquickcontrols2/dev) 2ee9e0c2d8cb8dc066f15ef488630d455947fd6a (qt/qtquickcontrols2/5.15)
To reproduce, click the item.
import QtQuick 2.12 import QtQuick.Controls 2.15 import QtQuick.Layouts 1.0 ApplicationWindow { width: 800 height: 400 visible: true property int swipeWidth: width / 2 SwipeDelegate { id: swipeDelegate text: "click me" width: parent.width height: 76 onClicked: { swipe.close() } swipe.onClosed: console.log("onClosed() triggered") swipe.left: Rectangle { anchors.left: parent.left width: swipeWidth height: parent.height color: "green" } } }
For Gerrit Dashboard: QTBUG-85806 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
309496,5 | SwipeDelegate: don't emit closed() when already closed | dev | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
310791,2 | SwipeDelegate: don't emit closed() when already closed | 5.15 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |