SwipeDelegate: don't emit closed() when already closed

If the mouse is released while our position is 0, it means we were
clicked, and we don't need to begin any transitions to close.

Fixes: QTBUG-85806
Pick-to: 5.15
Change-Id: Ic521f48e2977c1a99dbecaa585792a7798b9d749
Reviewed-by: Andy Shaw <andy.shaw@qt.io>